--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudyApp"
         tools:targetApi="31">
+        <activity
+            android:name=".MatchPartnerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GoalAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".StudyGoalsActivity"
+            android:exported="false" />
         <activity
             android:name=".InAppChatActivity"
             android:exported="false" />
