--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/studybuddy"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/studybuddy"
         android:supportsRtl="true"
         android:theme="@style/Theme.StudyApp"
         tools:targetApi="31">
+        <activity
+            android:name=".StudyPartner"
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".MatchPartnerActivity"
             android:exported="false" />
         <activity
             android:name=".GoalAdapter"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".StudyGoalsActivity"
             android:exported="false" />
